# Cluster-RTSP

./: .gitignore  LICENSE  README.md  clusterrtsp.rosinstall
cluster_rtsp/: CMakeLists.txt  package.xml  setup.py
cluster_rtsp/data/: target_points_pipes.csv
cluster_rtsp/scripts/: run_clusterRTSP
cluster_rtsp/src/cluster_rtsp/: XMeans.py  __init__.py  classes.py  clusterRTSP.py  configselect.py  environment.py  kinematics.py  tsp.py
kuka_kr6/kuka_description/: CMakeLists.txt  package.xml
kuka_kr6/kuka_description/launch/: load_kr6r900sixx.launch  test_kr6r900sixx.launch
kuka_kr6/kuka_description/urdf/: kr6r900sixx_macro.xacro  kuka_generic_tool.urdf.xacro  kuka_kr6r900.urdf.xacro
kuka_kr6/kuka_description/urdf/meshes/objects/: generic_tool.stl
kuka_kr6/kuka_openrave/: CMakeLists.txt  package.xml
kuka_kr6/kuka_openrave/objects/: cylinder.xml  robot_base.kinbody.xml
kuka_kr6/kuka_openrave/objects/meshes/: ERICA_base.stl  ERICA_base_plate.stl  ERICA_frame.stl  cylinder_hollow.stl  cylinder_hollow_small.stl  cylinder_large.stl  cylinder_medium.stl  cylinder_small.stl
kuka_kr6/kuka_openrave/robots/: kr6r900sixx.xml  kr6r900sixx_with_tool.xml
kuka_kr6/kuka_openrave/worlds/: kuka_ERICA_hollow_pipe.env.xml
